--- a/application/views/scripts/linha/editar.phtml
+++ b/application/views/scripts/linha/editar.phtml
@@ -250,6 +250,7 @@
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
 
             <div id="base_peixe">
+                <input type="hidden" readonly="" name="idRelacaoBioPeixe"/>
                 <input onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['lin_id']?>')" type="button" value="Adicionar" />
                 
                 <select style="float:left;" name="SelectEspeciePeixe">
@@ -280,6 +281,7 @@
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
 
             <div id="base_camarao">
+                <input type="hidden" readonly="" name="idRelacaoBioCamarao"/>
                 <input onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['lin_id']?>')" type="button" value="Adicionar" />
                 
                 <select style="float:left;" name="SelectEspecieCamarao">
