--- a/application/views/scripts/calao/editar.phtml
+++ b/application/views/scripts/calao/editar.phtml
@@ -239,6 +239,7 @@ endforeach;
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
 
             <div id="base_peixe">
+                <input type="hidden" readonly="" name="idRelacaoBioPeixe"/>
                 <input class="responsivo" onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "calao", "action" => "insertbiopeixe"), null, true) ?>', '<?= $this->entrevista['cal_id'] ?>')" type="button" value="Adicionar" />
 
                 <select class="responsivo" style="float:left;" name="SelectEspeciePeixe">
@@ -269,6 +270,7 @@ endforeach;
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
 
             <div id="base_camarao">
+                <input type="hidden" readonly="" name="idRelacaoBioCamarao"/>
                 <input class="responsivo" onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "calao", "action" => "insertbiocamarao"), null, true) ?>', '<?= $this->entrevista['cal_id'] ?>')" type="button" value="Adicionar" />
 
                 <select class="responsivo" style="float:left;" name="SelectEspecieCamarao">
