--- a/application/views/scripts/manzua/tablebiocamarao.phtml
+++ b/application/views/scripts/manzua/tablebiocamarao.phtml
@@ -21,6 +21,13 @@
                 <td name="inputComp.Cabeca"> <?= $unidadeCamarao['tbc_comprimento_cabeca'] ?> </td>
                 <td name="inputPeso"> <?= $unidadeCamarao['tbc_peso'] ?> </td>
                 <td class="td-botao">
+                        <a name="Editar" class="button-del" onclick="ajax_update_bio_camarao(<?= $unidadeCamarao['tmanbc_id'] ?>, '<?= $unidadeCamarao['esp_id'] ?>', '<?= $unidadeCamarao['tbc_comprimento_cabeca'] ?>', '<?= $unidadeCamarao['tbc_sexo'] ?>','<?= $unidadeCamarao['tbc_peso'] ?>','<?= $unidadeCamarao['tmat_id'] ?>', document.getElementById('formEntrevistas'))">
+                            <ul id="icons" class="ui-widget ui-helper-clearfix">
+                                <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
+                            </ul>
+                        </a> 
+                    </td>
+                <td class="td-botao">
                     <a name="Excluir" class="button-del" onclick="ajax_delete_entrevista_has('<?= $this->entrevista['man_id'] ?>', '<?= $this->url(array("controller" => "manzua", "action" => "deletebiocamarao"), null, true) ?>', '<?= $unidadeCamarao['tmanbc_id'] ?>', 'biocamarao')">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Excluir"><span class="ui-icon ui-icon-close"></span></li>
