--- a/application/views/scripts/mergulho/editar.phtml
+++ b/application/views/scripts/mergulho/editar.phtml
@@ -237,6 +237,7 @@
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
 
             <div id="base_peixe">
+                <input type="hidden" readonly="" name="idRelacaoBioPeixe"/>
                 <input class="responsivo" onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "mergulho", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['mer_id']?>')" type="button" value="Adicionar" />
                 
                 <select class="responsivo" style="float:left;" name="SelectEspeciePeixe">
@@ -267,6 +268,7 @@
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
 
             <div id="base_camarao">
+                <input type="hidden" readonly="" name="idRelacaoBioCamarao"/>
                 <input class="responsivo" onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "mergulho", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['mer_id']?>')" type="button" value="Adicionar" />
                 
                 <select class="responsivo" style="float:left;" name="SelectEspecieCamarao">
