--- a/application/views/scripts/siripoia/editar.phtml
+++ b/application/views/scripts/siripoia/editar.phtml
@@ -243,6 +243,7 @@
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
 
             <div id="base_peixe">
+                <input type="hidden" readonly="" name="idRelacaoBioPeixe"/>
                 <input class="responsivo" onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "siripoia", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['sir_id']?>')" type="button" value="Adicionar" />
                 
                 <select style="float:left;" name="SelectEspeciePeixe">
@@ -273,6 +274,7 @@
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
 
             <div id="base_camarao">
+                <input type="hidden" readonly="" name="idRelacaoBioCamarao"/>
                 <input class="responsivo" onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "siripoia", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['sir_id']?>')" type="button" value="Adicionar" />
                 
                 <select class="responsivo" style="float:left;" name="SelectEspecieCamarao">
