--- a/application/views/scripts/linha-fundo/editar.phtml
+++ b/application/views/scripts/linha-fundo/editar.phtml
@@ -284,7 +284,8 @@
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
 
             <div id="base_peixe">
-                <input onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "linha-fundo", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['lf_id']?>')" type="button" value="Adicionar" />
+                <input type="hidden" readonly="" name="idRelacaoBioPeixe"/>
+                <input class="responsivo" name="AddBioPeixe" onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "linha-fundo", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['lf_id']?>')" type="button" value="Adicionar" />
                 
                 <select style="float:left;" name="SelectEspeciePeixe">
                     <?php foreach ($this->especies as $key => $especie): ?>
@@ -314,7 +315,8 @@
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
 
             <div id="base_camarao">
-                <input onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "linha-fundo", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['lf_id']?>')" type="button" value="Adicionar" />
+                <input type="hidden" readonly="" name="idRelacaoBioCamarao"/>
+                <input class="responsivo" name="AddBioCamarao" onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "linha-fundo", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['lf_id']?>')" type="button" value="Adicionar" />
                 
                 <select style="float:left;" name="SelectEspecieCamarao">
                     <?php foreach ($this->especieCamarao as $key => $especieCamarao): ?>
