--- a/application/views/scripts/manzua/editar.phtml
+++ b/application/views/scripts/manzua/editar.phtml
@@ -171,6 +171,7 @@
         <input type="hidden" name="id_fichaDiaria" placeholder="ID"  value="<?= $this->monitoramento['fd_id'] ?>" /><br />
        
         <fieldset class="noEditable"><legend>Pesqueiro:</legend>
+            <input readonly="" type="hidden" name="idPesqueiro" />
             <fieldset name="AddPesqueiro" class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
                 <div id="base">
                     <input class="responsivo" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "manzua", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['man_id'] ?>', 'distancia')" type="button" value="Adicionar" />
@@ -241,7 +242,7 @@
 
             <div id="base_peixe">
                 <input type="hidden" readonly="" name="idRelacaoBioPeixe"/>
-                <input class="responsivo" onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "manzua", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['man_id']?>')" type="button" value="Adicionar" />
+                <input class="responsivo" name="AddBioPeixe" onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "manzua", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['man_id']?>')" type="button" value="Adicionar" />
                 
                 <select class="responsivo" style="float:left;" name="SelectEspeciePeixe">
                     <?php foreach ($this->especies as $key => $especie): ?>
@@ -272,7 +273,7 @@
 
             <div id="base_camarao">
                 <input type="hidden" readonly="" name="idRelacaoBioCamarao"/>
-                <input class="responsivo" onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "manzua", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['man_id']?>')" type="button" value="Adicionar" />
+                <input class="responsivo" name="AddBioCamarao" onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "manzua", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['man_id']?>')" type="button" value="Adicionar" />
                 
                 <select class="responsivo" style="float:left;" name="SelectEspecieCamarao">
                     <?php foreach ($this->especieCamarao as $key => $especieCamarao): ?>
