--- a/application/views/scripts/vara-pesca/editar.phtml
+++ b/application/views/scripts/vara-pesca/editar.phtml
@@ -209,7 +209,8 @@
     <fieldset class="noEditable"><legend>Pesqueiro:</legend>
                 <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
                     <div id="base">
-                        <input name="AddPesqueiro" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "vara-pesca", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['vp_id'] ?>','distancia')" type="button" value="Adicionar" />
+                        <input readonly="" type="hidden" name="idPesqueiro" />
+                        <input class="responsivo" name="AddPesqueiro" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "vara-pesca", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['vp_id'] ?>','distancia')" type="button" value="Adicionar" />
                         <select style="float:left;" name="nomePesqueiro" class="responsivo">
                             <option value="" selected></option>
                             <?php foreach ($this->pesqueiros as $key => $pesqueiro): ?>
@@ -281,7 +282,7 @@
 
             <div id="base_peixe">
                 <input type="hidden" readonly="" name="idRelacaoBioPeixe"/>
-                <input class="responsivo" onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "vara-pesca", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['vp_id']?>')" type="button" value="Adicionar" />
+                <input class="responsivo" name="AddBioPeixe" onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "vara-pesca", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['vp_id']?>')" type="button" value="Adicionar" />
                 
                 <select style="float:left;" name="SelectEspeciePeixe" class="responsivo">
                     <?php foreach ($this->especies as $key => $especie): ?>
@@ -312,7 +313,7 @@
 
             <div id="base_camarao">
                 <input type="hidden" readonly="" name="idRelacaoBioCamarao"/>
-                <input class="responsivo" onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "vara-pesca", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['vp_id']?>')" type="button" value="Adicionar" />
+                <input class="responsivo" name="AddBioCamarao" onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "vara-pesca", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['vp_id']?>')" type="button" value="Adicionar" />
                 
                 <select class="responsivo" style="float:left;" name="SelectEspecieCamarao">
                     <?php foreach ($this->especieCamarao as $key => $especieCamarao): ?>
