--- a/application/views/scripts/grosseira/editar.phtml
+++ b/application/views/scripts/grosseira/editar.phtml
@@ -255,7 +255,7 @@
 
             <div id="base_peixe">
                 <input type="hidden" readonly="" name="idRelacaoBioPeixe"/>
-                <input class="responsivo" onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "grosseira", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['grs_id']?>')" type="button" value="Adicionar" />
+                <input class="responsivo" name="AddBioPeixe" onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "grosseira", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['grs_id']?>')" type="button" value="Adicionar" />
                 
                 <select class="responsivo" style="float:left;" name="SelectEspeciePeixe">
                     <?php foreach ($this->especies as $key => $especie): ?>
@@ -282,7 +282,8 @@
         <fieldset class="noEditable"><legend>Dados das Amostras:</legend>
 
             <div id="base_camarao">
-                <input class="responsivo" onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "grosseira", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['grs_id']?>')" type="button" value="Adicionar" />
+                <input type="hidden" readonly="" name="idRelacaoBioPeixe"/>
+                <input class="responsivo" name="AddBioCamarao" onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "grosseira", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['grs_id']?>')" type="button" value="Adicionar" />
                 
                 <select class="responsivo" style="float:left;" name="SelectEspecieCamarao">
                     <?php foreach ($this->especieCamarao as $key => $especieCamarao): ?>
