--- a/application/views/scripts/linha/editar.phtml
+++ b/application/views/scripts/linha/editar.phtml
@@ -251,7 +251,7 @@
 
             <div id="base_peixe">
                 <input type="hidden" readonly="" name="idRelacaoBioPeixe"/>
-                <input onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['lin_id']?>')" type="button" value="Adicionar" />
+                <input class="responsivo" name="AddBioPeixe" onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['lin_id']?>')" type="button" value="Adicionar" />
                 
                 <select style="float:left;" name="SelectEspeciePeixe">
                     <?php foreach ($this->especies as $key => $especie): ?>
@@ -282,7 +282,7 @@
 
             <div id="base_camarao">
                 <input type="hidden" readonly="" name="idRelacaoBioCamarao"/>
-                <input onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['lin_id']?>')" type="button" value="Adicionar" />
+                <input class="responsivo" name="AddBioCamarao" onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "linha", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['lin_id']?>')" type="button" value="Adicionar" />
                 
                 <select style="float:left;" name="SelectEspecieCamarao">
                     <?php foreach ($this->especieCamarao as $key => $especieCamarao): ?>
