--- a/application/views/scripts/ratoeira/editar.phtml
+++ b/application/views/scripts/ratoeira/editar.phtml
@@ -173,6 +173,7 @@
         <fieldset class="noEditable"><legend>Pesqueiro:</legend>
             <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
                 <div id="base">
+                    <input readonly="" type="hidden" name="idPesqueiro" />
                     <input class="responsivo" name="AddPesqueiro" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "ratoeira", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['rat_id'] ?>','distancia')" type="button" value="Adicionar" />
                     <select class="responsivo" style="float:left;" name="nomePesqueiro">
                         <option value="" selected></option>
@@ -245,7 +246,7 @@
 
             <div id="base_peixe">
                 <input type="hidden" readonly="" name="idRelacaoBioPeixe"/>
-                <input class="responsivo" onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "ratoeira", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['rat_id']?>')" type="button" value="Adicionar" />
+                <input class="responsivo" name="AddBioPeixe" onclick="ajax_biopeixe(this.form, '<?= $this->url(array("controller" => "ratoeira", "action" => "insertbiopeixe"), null, true) ?>','<?=$this->entrevista['rat_id']?>')" type="button" value="Adicionar" />
                 
                 <select class="responsivo" style="float:left;" name="SelectEspeciePeixe">
                     <?php foreach ($this->especies as $key => $especie): ?>
@@ -276,7 +277,7 @@
 
             <div id="base_camarao">
                 <input type="hidden" readonly="" name="idRelacaoBioCamarao"/>
-                <input class="responsivo" onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "ratoeira", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['rat_id']?>')" type="button" value="Adicionar" />
+                <input class="responsivo" name="AddBioCamarao" onclick="ajax_biocamarao(this.form, '<?= $this->url(array("controller" => "ratoeira", "action" => "insertbiocamarao"), null, true) ?>','<?=$this->entrevista['rat_id']?>')" type="button" value="Adicionar" />
                 
                 <select class="responsivo" style="float:left;" name="SelectEspecieCamarao">
                     <?php foreach ($this->especieCamarao as $key => $especieCamarao): ?>
