--- a/application/views/scripts/coleta-manual/tablepesqueiro.phtml
+++ b/application/views/scripts/coleta-manual/tablepesqueiro.phtml
@@ -14,7 +14,14 @@
                 <td name="inputIdEntrevista"> <?= $vColetaManual['cml_id'] ?> </td>
                 <td name="inputPesqueiro" > <?= $vColetaManual['paf_pesqueiro'] ?> </td>
                 <td name="inputTempoaPesqueiro"> <?= $vColetaManual['t_tempoapesqueiro'] ?> </td>
-                <td name="inputTempoaPesqueiro"> <?= $vColetaManual['t_distapesqueiro'] ?> </td>
+                <td name="inputDistanciaaPesqueiro"> <?= $vColetaManual['t_distapesqueiro'] ?> </td>
+                <td class="td-botao">
+                    <a name="Editar" class="button-del" onclick="ajax_update_pesqueiro('<?= $vColetaManual['cml_paf_id'] ?>', '<?= $vColetaManual['t_tempopesqueiro'] ?>', '<?= $vColetaManual['t_distapesqueiro'] ?>', document.getElementById('formEntrevistas'))">
+                        <ul id="icons" class="ui-widget ui-helper-clearfix">
+                            <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
+                        </ul>
+                    </a> 
+                </td>
                 <td class="td-botao">
                     <a name="Excluir" class="button-del" onclick="ajax_delete_entrevista_has(<?= $this->entrevista['cml_id'] ?>, '<?= $this->url(array("controller" => "coleta-manual", "action" => "deletepesqueiro"), null, true) ?>', <?= $vColetaManual['cml_paf_id'] ?>, 'pesqueiro')">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
