--- a/application/views/scripts/emalhe/visualizar.phtml
+++ b/application/views/scripts/emalhe/visualizar.phtml
@@ -16,12 +16,12 @@
         <table id="dataTable" class="display" cellspacing="0" width="100%">
         <thead>
             <tr>
-            <th>>Entrevista</th>
-            <th>>Ficha Diária</th>
-            <th>>Monitoramento</th>
-            <th>>Pescador</th>
-            <th>>Apelido</th>
-            <th>>Barco</th>
+            <th>Entrevista</th>
+            <th>Ficha Diária</th>
+            <th>Monitoramento</th>
+            <th>Pescador</th>
+            <th>Apelido</th>
+            <th>Barco</th>
             <th></th>
             <th></th>
             </tr>
