--- a/application/views/scripts/tarrafa/tablepesqueiro.phtml
+++ b/application/views/scripts/tarrafa/tablepesqueiro.phtml
@@ -12,7 +12,7 @@
                 <td name="inputIdEntrevista"> <?= $vTarrafa['tar_id'] ?> </td>
                 <td name="inputPesqueiro"> <?= $vTarrafa['paf_pesqueiro'] ?> </td>
                 <td class="td-botao">
-                    <a name="Editar" class="button-del" onclick="ajax_update_pesqueiro('<?= $vTarrafa['tar_paf_id'] ?>', '', '', document.getElementById('formEntrevistas'))">
+                    <a name="Editar" class="button-del" onclick="ajax_update_pesqueiro('<?= $vTarrafa['tar_paf_id'] ?>','<?= $vTarrafa['paf_id'] ?>', '', '', document.getElementById('formEntrevistas'))">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
                         </ul>
