--- a/application/views/scripts/jerere/tablepesqueiro.phtml
+++ b/application/views/scripts/jerere/tablepesqueiro.phtml
@@ -16,7 +16,7 @@
             <td name="inputTempoaPesqueiro"> <?= $vJerere['t_tempoapesqueiro'] ?> </td>
             <td name="inputTempoaPesqueiro"> <?= $vJerere['t_distapesqueiro'] ?> </td>
             <td class="td-botao">
-                <a name="Editar" class="button-del" onclick="ajax_update_pesqueiro('<?= $vJerere['jre_paf_id'] ?>','<?= $vJerere['paf_id'] ?>', '<?= $vJerere['t_tempopesqueiro'] ?>', '<?= $vJerere['t_distapesqueiro'] ?>', document.getElementById('formEntrevistas'))">
+                <a name="Editar" class="button-del" onclick="ajax_update_pesqueiro('<?= $vJerere['jre_paf_id'] ?>','<?= $vJerere['paf_id'] ?>', '<?= $vJerere['t_tempoapesqueiro'] ?>', '<?= $vJerere['t_distapesqueiro'] ?>', document.getElementById('formEntrevistas'))">
                     <ul id="icons" class="ui-widget ui-helper-clearfix">
                         <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
                     </ul>
