--- a/application/views/scripts/ratoeira/tablepesqueiro.phtml
+++ b/application/views/scripts/ratoeira/tablepesqueiro.phtml
@@ -16,7 +16,7 @@
                 <td name="inputTempoaPesqueiro"> <?= $vRatoeira['t_tempoapesqueiro'] ?> </td>
                 <td name="inputTempoaPesqueiro"> <?= $vRatoeira['t_distapesqueiro'] ?> </td>
                 <td class="td-botao">
-                    <a name="Editar" class="button-del" onclick="ajax_update_pesqueiro('<?= $vRatoeira['rat_paf_id'] ?>','<?= $vRatoeira['paf_id'] ?>', '<?= $vRatoeira['t_tempopesqueiro'] ?>', '<?= $vRatoeira['t_distapesqueiro'] ?>', document.getElementById('formEntrevistas'))">
+                    <a name="Editar" class="button-del" onclick="ajax_update_pesqueiro('<?= $vRatoeira['rat_paf_id'] ?>','<?= $vRatoeira['paf_id'] ?>', '<?= $vRatoeira['t_tempoapesqueiro'] ?>', '<?= $vRatoeira['t_distapesqueiro'] ?>', document.getElementById('formEntrevistas'))">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
                         </ul>
