--- a/application/views/scripts/grosseira/tablepesqueiro.phtml
+++ b/application/views/scripts/grosseira/tablepesqueiro.phtml
@@ -14,7 +14,7 @@
                 <td name="inputPesqueiro" > <?= $vGrosseira['paf_pesqueiro'] ?> </td>
                 <td name="inputTempoaPesqueiro"> <?= $vGrosseira['t_tempoapesqueiro'] ?> </td>
                 <td class="td-botao">
-                    <a name="Editar" class="button-del" onclick="ajax_update_pesqueiro('<?= $vGrosseira['grs_paf_id'] ?>','<?= $vGrosseira['paf_id'] ?>', '<?= $vGrosseira['t_tempopesqueiro'] ?>', '', document.getElementById('formEntrevistas'))">
+                    <a name="Editar" class="button-del" onclick="ajax_update_pesqueiro('<?= $vGrosseira['grs_paf_id'] ?>','<?= $vGrosseira['paf_id'] ?>', '<?= $vGrosseira['t_tempoapesqueiro'] ?>', '', document.getElementById('formEntrevistas'))">
                         <ul id="icons" class="ui-widget ui-helper-clearfix">
                             <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
                         </ul>
