--- a/application/views/scripts/coleta-manual/editar.phtml
+++ b/application/views/scripts/coleta-manual/editar.phtml
@@ -168,6 +168,7 @@
         <fieldset class="noEditable"><legend>Pesqueiro:</legend>
             <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
                 <div id="base">
+                    <input readonly="" type="hidden" name="idPesqueiro" />
                     <input class="responsivo" name="AddPesqueiro" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "coleta-manual", "action" => "insertpesqueiro"), null, true) ?>', '<?= $this->entrevista['cml_id'] ?>', 'distancia')" type="button" value="Adicionar" />
                     <select class="responsivo" style="float:left;" name="nomePesqueiro">
                         <option value="" selected></option>
