--- a/application/views/scripts/arrasto-fundo/tablepesqueiro.phtml
+++ b/application/views/scripts/arrasto-fundo/tablepesqueiro.phtml
@@ -15,7 +15,7 @@
                             <td name="inputPesqueiro" > <?= $vArrastoFundo['paf_pesqueiro'] ?> </td>
                             <td name="inputTempoaPesqueiro"> <?= $vArrastoFundo['t_tempopesqueiro'] ?> </td>
                             <td class="td-botao">
-                                <a name="Editar" class="button-del" onclick="ajax_update_pesqueiro('<?= $vArrastoFundo['af_paf_id'] ?>', '<?= $vArrastoFundo['paf_id'] ?>','<?= $vArrastoFundo['t_tempopesqueiro'] ?>', '', document.getElementById('formEntrevistas'))">
+                                <a name="Editar" class="button-del" onclick="ajax_update_pesqueiro('<?= $vArrastoFundo['af_paf_id'] ?>', '<?= $vArrastoFundo['paf_id'] ?>','<?= $vArrastoFundo['t_tempopesqueiro'] ?>', '','', document.getElementById('formEntrevistas'))">
                                     <ul id="icons" class="ui-widget ui-helper-clearfix">
                                         <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
                                     </ul>
