--- a/application/views/scripts/calao/tablepesqueiro.phtml
+++ b/application/views/scripts/calao/tablepesqueiro.phtml
@@ -12,7 +12,7 @@
                             <td name="inputIdEntrevista"> <?= $vCalao['cal_id'] ?> </td>
                             <td name="inputPesqueiro"> <?= $vCalao['paf_pesqueiro'] ?> </td>
                             <td class="td-botao">
-                                <a name="Editar" class="button-del" onclick="ajax_update_pesqueiro('<?= $vCalao['cal_paf_id'] ?>','<?= $vCalao['paf_id'] ?>', '', '', document.getElementById('formEntrevistas'))">
+                                <a name="Editar" class="button-del" onclick="ajax_update_pesqueiro('<?= $vCalao['cal_paf_id'] ?>','<?= $vCalao['paf_id'] ?>', '', '','', document.getElementById('formEntrevistas'))">
                                     <ul id="icons" class="ui-widget ui-helper-clearfix">
                                         <li class="ui-state-default ui-corner-all" title="Editar"><span class="ui-icon ui-icon-pencil"></span></li>
                                     </ul>
