--- a/application/views/scripts/grosseira/editar.phtml
+++ b/application/views/scripts/grosseira/editar.phtml
@@ -189,6 +189,7 @@
 <fieldset class="noEditable"><legend>Pesqueiro:</legend>
         <fieldset class="noEditable"><legend>Pesqueiro e tempo até o pesqueiro:</legend>
             <div id="base">
+                <input readonly="" type="hidden" name="idPesqueiro" />
                 <input class="responsivo" name="AddPesqueiro" onclick="ajax_pesqueiro(this.form, '<?= $this->url(array("controller" => "grosseira", "action" => "insertpesqueiro"), null, true) ?>', '<?=$this->entrevista['grs_id']?>', 'tempo')" type="button" value="Adicionar" />
                 <select class="responsivo" style="float:left;" name="nomePesqueiro">
                     <option value="" selected></option>
