Relatorios Barco e Pescador

--- a/application/views/scripts/pescador/relatorio.phtml
+++ b/application/views/scripts/pescador/relatorio.phtml
@@ -19,6 +19,7 @@
             <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "relatorios", "action" => "relatoriopescadores"), null, true) ?>"target="_blank" class="relatorio">Pescadores Com Todos os Dados</a></li>
             <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "relatorios", "action" => "relatoriocompletopescadores"), null, true) ?>"target="_blank" class="relatorio">Pescadores Monitorados</a></li>      
             <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "relatorios", "action" => "relatorioespecialista"), null, true) ?>"target="_blank" class="relatorio">Pescadores Especialistas - Com Todos os Dados</a></li>
+            <li><img src="img/xls-icon.png" class="icon-relatorios"/><a class="relatorio" href="<?= $this->url(array("controller" => "pescador", "action" => "relatoriopescador"), null, true) ?>"target="_blank" class="relatorio">Lista de Pescadores</a></li>
         </ul>
 </fieldset>
 
