--- a/application/views/scripts/barcos/indexrelatorio.phtml
+++ b/application/views/scripts/barcos/indexrelatorio.phtml
@@ -25,6 +25,7 @@
 <ul>
     <li><img src="img/xls-icon.png" class="icon-relatorios"/><a href="<?= $this->url(array("controller" => "relatorios", "action" => "embarcacaodetalhada"), null, true) ?>" target="_blank" class="relatorio">Embarcações Detalhadas</a></li>
     <li><img src="img/pdf-icon.png" class="icon-relatorios"/><a href="<?= $this->url(array("controller" => "barcos", "action" => "relatorio"), null, true) ?>" target="_blank" class="relatorio">Lista de Embarcações</a></li>
+    <li><img src="img/xls-icon.png" class="icon-relatorios"/><a href="<?= $this->url(array("controller" => "barcos", "action" => "relatoriobarcos"), null, true) ?>" target="_blank" class="relatorio">Lista de Embarcações</a></li>
 </ul>
 
 <h3>Tabelas conjuntas</h3>
